--- a/src/css/header.css
+++ b/src/css/header.css
@@ -16,3 +16,8 @@ a {
     text-decoration: none;
     color: white;
 }
+
+a:hover {
+    text-decoration: underline;
+    text-underline-offset: 4px;
+}
